# silicon-api

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: ecy.rs  hitokoto.rs  main.rs
