[package]
name = "silicon-api"
version = "0.1.0"
authors = ["wdvxdr <wdvxdr@foxmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
serde = "1.0.125"
serde_json = "1.0.64"
silicon = "0.4.1"
lazy_static = "1.4.0"
syntect = "4.5.0"
uuid = { version = "0.8", features = ["serde", "v4"] }